--- a/packages/index.less
+++ b/packages/index.less
@@ -1,1 +1,16 @@
 @indexColor: #409eff;
+@borderColor: #ddd;
+@textColor: #999;
+// size 高度
+@mini: 24px;
+@default: 32px;
+@large: 40px;
+
+html {
+  box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
