--- a/packages/index.less
+++ b/packages/index.less
@@ -1,20 +1,1 @@
-@indexColor: #409eff;
-@borderColor: #ddd;
-@textColor: #999;
-// size 高度
-@mini: 24px;
-@default: 32px;
-@large: 40px;
-
-@success: #19be6b;
-@warning: #ff9900;
-@error: #ed4014;
-
-html {
-  box-sizing: border-box;
-}
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-}
+@import './theme/index.less';
