--- a/packages/theme/index.less
+++ b/packages/theme/index.less
@@ -4,3 +4,12 @@
 @import './card.less';
 @import './input.less';
 @import './tag.less';
+
+html,
+body ul,
+ol,
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
